fix: change overflow to overflow-x to fix vertical scroll bug

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: var(--bg-dark);
 }
 
